--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
     <head>
         <title>ISS Tracker</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
-        <link rel="stylesheet" href="./static/css/style.css" />
+        <link rel="stylesheet" href="../static/css/style.css" />
     </head>
 
     <body>
@@ -12,7 +13,7 @@
     </body>
 
     <footer>
-        <script src="./static/js/config.js"></script>
-        <script src="./static/js/app.js"></script>
+        <script src="../static/js/config.js"></script>
+        <script src="../static/js/app.js"></script>
     </footer>
 </html>
