--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,11 @@
         <div id="mapid"></div>
     </body>
     <footer>
+        <script type="text/javascript">
+            window.dataObj = {
+              data: '{{ data }}'
+            }
+        </script>
         <script src="../static/js/config.js"></script>
         <script src="../static/js/app.js"></script>
     </footer>
