--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
     </body>
     <footer>
         <script src="../static/js/config.js"></script>
+        <script src="../static/js/util.js"></script>
         <script src="../static/js/app.js"></script>
     </footer>
 </html>
