--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         <div id="mapid"></div>
     </body>
     <footer>
-        <script src="../static/js/config.js"></script>
+        <!--script src="../static/js/config.js"></script-->
         <script src="../static/js/util.js"></script>
         <script src="../static/js/app.js"></script>
     </footer>
