Added buttons to toggle style and toggle markers

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>ISS Tracker</h1>
         <div id="mapid"></div>
+        <button onclick="toggleMarkers()">Toggle Markers</button>
+        <button onclick="toggleStyle()">Toggle Style</button>
     </body>
     <footer>
         <!--script src="../static/js/config.js"></script-->
