--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
     <head>
         <title>ISS Tracker</title>
+        <link rel="image_src" href="{{ url_for('static', filename='img/srcimg.jpg') }}">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="../static/css/style.css" />
     </head>
     <body>
         <div id="map-header">
@@ -21,7 +23,8 @@
         </div>
     </body>
     <footer>
-        <script src="../static/js/util.js"></script>
-        <script src="../static/js/app.js"></script>
+        <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
+        <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </footer>
 </html>
