--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -1,4 +1,4 @@
-#map-header {
+.map-header {
     border: 2px solid rgb(2, 11, 128);
     padding-top: 7px;
     padding-bottom: 7px;
@@ -19,25 +19,20 @@
     margin-bottom: 2px;
 }
 
-.header-button-left {
-    width: 15%;
+.header-img {
+    width: 30px;
+    height: 30px;
+}
+
+.header-button {
+    width: 10%;
     background-color: rgb(2, 11, 128);
     color: white;
+    margin-right: 3px;
+    margin-left: 3px;
 }
 
-.header-button-left:hover {
-    background-color: white; 
-    color: black; 
-    border: 2px solid rgb(2, 11, 128);
-}
-
-.header-button-right {
-    width: 15%;
-    background-color: rgb(2, 11, 128);
-    color: white;
-}
-
-.header-button-right:hover {
+.header-button:hover {
     background-color: white; 
     color: black; 
     border: 2px solid rgb(2, 11, 128);
@@ -47,19 +42,6 @@
     height: 500px;
     width: 100%;
     border: 3px solid rgb(2, 11, 128);
-}
-
-#map-footer {
-    border: 2px solid rgb(2, 11, 128);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 7px;
-    margin-bottom: 7px;
-    padding-top: 7px;
-    padding-bottom: 7px;
 }
 
 html {
@@ -86,4 +68,37 @@ button {
     background-color: white; 
     color: black; 
     border: 2px solid rgb(2, 11, 128);
+}
+
+/* When under 123px do this */
+@media screen and (min-width: 900px) and (max-width: 1350px) {
+    .header-button {
+        width: 15%;
+    }
+}
+
+@media screen and (min-width: 675px) and (max-width: 900px) {
+    .header-button {
+        width: 20%;
+    }
+}
+
+@media screen and (min-width: 590px) and (max-width: 675px) {
+    .header-button {
+        width: 23%;
+    }
+}
+
+@media screen and (min-width: 475px) and (max-width: 590px) {
+    .header-button {
+        width: 23%;
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 475px) {
+    .header-button {
+        width: 24%;
+        font-size: 9px;
+    }
 }
