Added toggle lines

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -17,10 +17,10 @@
         </div>
         <div id="mapid"></div>
         <div class="map-header">
-            <button class="header-button" onclick="location.href='/data-table'">Data Table</button>
-            <button class="header-button" onclick="location.href='/data'">Json Data</button>
-            <button class="header-button" onclick="toggleMarkers()">Toggle Markers</button>
             <button class="header-button" onclick="toggleStyle()">Toggle Style</button>
+            <button class="header-button" onclick="toggleMarkers()">Toggle Markers</button>
+            <button class="header-button" onclick="toggleLines()">Toggle Lines</button>
+            <button class="header-button" onclick="location.href='/data-table'">Data Table</button>
         </div>
     </body>
     <footer>
