Fixed media query data table bug

--- a/flask_app/static/css/data_style.css
+++ b/flask_app/static/css/data_style.css
@@ -148,7 +148,13 @@ td:nth-of-type(11):before {
     content: "Country Capital";
 }
 
-@media screen and (min-width: 650px) and (max-width: 1200px) {
+@media only screen and (max-width: 600px) {
+    .data-table td {
+        padding-left: 47%;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
     .data-table td {
         padding-left: 30%;
     }
