--- a/flask_app/templates/data.html
+++ b/flask_app/templates/data.html
@@ -72,7 +72,7 @@
                     <tr>
                         <td>Country Flag URL</td>
                         {% if record['country_flag_url'] %}
-                        <td>{{record['country_flag_url']}}</td>
+                        <td><a href="{{record['country_flag_url']}}" target="_blank">{{record['country_flag_url']}}</a></td>
                         {% else %}
                         <td>- None -</td>
                         {% endif %}
