--- a/flask_app/templates/data.html
+++ b/flask_app/templates/data.html
@@ -2,8 +2,10 @@
 
 <head>
     <title>ISS Tracker Data Table</title>
+    <link rel="image_src" href="{{ url_for('static', filename='img/srcimg.jpg') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/data_style.css') }}" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
