--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://d3js.org/d3.v5.js"></script>
     </head>
     <body>
         <div class="map-header">
@@ -21,6 +22,14 @@
             <button class="header-button" onclick="toggleMarkers()">Toggle Markers</button>
             <button class="header-button" onclick="toggleLines()">Toggle Lines</button>
             <button class="header-button" onclick="location.href='/data-table'">Data Table</button>
+        </div>
+        <div id="single-data-points">
+            <div class="single-data-point">
+                <p id="avgSpeed" />
+            </div>
+            <div class="single-data-point">
+                <p id="avgTemp" />
+            </div>
         </div>
     </body>
     <footer>
