--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -2,7 +2,7 @@ html {
     background-color: black;
 }
 
-.map-header {
+.header {
     border: 3px solid rgb(2, 11, 128);
     padding-top: 7px;
     padding-bottom: 7px;
