--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -11,19 +11,25 @@
         <script src="https://d3js.org/d3.v5.js"></script>
     </head>
     <body>
-        <div class="map-header">
+        <div class="header">
             <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
             <h1 class="title">ISS Tracker</h1>
             <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
         </div>
         <div id="mapid"></div>
-        <div class="map-header">
+        <div class="header">
             <button class="header-button" onclick="toggleStyle()">Toggle Style</button>
             <button class="header-button" onclick="toggleMarkers()">Toggle Markers</button>
             <button class="header-button" onclick="toggleLines()">Toggle Lines</button>
             <button class="header-button" onclick="location.href='/data-table'">Data Table</button>
         </div>
+        <div class="header">
+            <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
+            <h1 class="title">Today's Stats</h1>
+            <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
+        </div>
         <div id="single-data-points">
+            <!-- <h2 class="title">Today's Stats</h2> -->
             <div class="single-data-point">
                 <p id="avgSpeed" />
             </div>
