--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -37,6 +37,7 @@
                 <p id="avgTemp" />
             </div>
         </div>
+        <div id="svg-area"></div>
     </body>
     <footer>
         <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
