--- a/flask_app/templates/data.html
+++ b/flask_app/templates/data.html
@@ -17,7 +17,7 @@
         </div>
         <div id="controls">
             <button class="control-button" onclick="location.href='/'">Home</button>
-            <button class="control-button" onclick="location.href='/data'">Json</button>
+            <button class="control-button" onclick="location.href='/data?numRows=100'">Json</button>
         </div>
         <div class="border-div">
             {% for record in data %}
