--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -37,7 +37,7 @@
                 <p id="avgTemp" />
             </div>
         </div>
-        <div id="svg-area"></div>
+        <svg id="weather-counts" width="600" height="500"></svg>
     </body>
     <footer>
         <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
