--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://d3js.org/d3.v5.js"></script>
+        <script src="https://d3js.org/d3.v3.js"></script>
     </head>
     <body>
         <div class="header">
@@ -37,7 +37,10 @@
                 <p id="avgTemp" />
             </div>
         </div>
-        <svg id="weather-counts" width="600" height="500"></svg>
+        <!-- <svg id="weather-counts" width="600" height="500"></svg> -->
+        <div id="weather-counts">
+            <h2 class="subtitle">Most Common Weather</h2>
+        </div>
     </body>
     <footer>
         <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
