--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="header">
             <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
-            <h1 class="title">Today's Stats</h1>
+            <h1 class="title">Today's Records</h1>
             <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
         </div>
         <div id="single-data-points">
@@ -40,6 +40,14 @@
         <!-- <svg id="weather-counts" width="600" height="500"></svg> -->
         <div id="weather-counts">
             <h2 class="subtitle">Most Common Weather</h2>
+        </div>
+        <div id="country-counts">
+            <h2 class="subtitle">Most Visited Countries</h2>
+        </div>
+        <div class="header">
+            <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
+            <h1 class="title">Thanks For Stopping By</h1>
+            <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
         </div>
     </body>
     <footer>
