--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -42,9 +42,11 @@
         </div>
         <div id="weather-counts">
             <h2 class="subtitle">Most Common Weather</h2>
+            <table id="weather-counts-table"></table>
         </div>
         <div id="country-counts">
             <h2 class="subtitle">Most Visited Countries</h2>
+            <table id="country-counts-table"></table>
         </div>
         <div class="header">
             <img class="header-img" src="{{ url_for('static', filename='img/bluestar.svg') }}" />
@@ -55,6 +57,7 @@
     <footer>
         <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
         <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/tablecreator.js') }}"></script>
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </footer>
 </html>
