sumbit btn hover fix

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -123,6 +123,12 @@ html {
     color: white;
 }
 
+#data-point-submit:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid rgb(2, 11, 128);
+}
+
 .single-data-title {
     color: red;
     margin-top: 0;
