Fix bordering countries

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -66,6 +66,7 @@
     <footer>
         <script type="text/javascript">var mbk = {{ mbkpy|tojson }}</script>
         <script src="{{ url_for('static', filename='js/timeutil.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/countryutil.js') }}"></script>
         <script src="{{ url_for('static', filename='js/tablecreator.js') }}"></script>
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </footer>
